sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:4: error: ':' expected but ')' found.
  def gCrepeF(n){
               ^BasicPancake:12: error: identifier expected but '}' found.
    for(x<-0 to N){gCrepeF(N-x)}} 
                                ^